<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMSR</string>
    <string name="home">Home</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="menu_settings">Settings</string>

    <color name="white">#FFFFFF</color>

    <string name="illustration">Illustration</string>

    <color name="black">#000000</color>
    <color name="silver">#C0C0C0</color>

    <string name="read">(Touch to Start)</string>
    <string name="closeBracket">)</string>
    <string name="bracket">)</string>
    <string name="number">Number</string>

    <color name="orange">#FFA500</color>

    <string name="en">English</string>
    <string name="bm">Bahasa Malaysia</string>
    <string name="cn">华文</string>
    <string name="tm">தமிழ்</string>
    <string name="name">Name</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="my_library">My Library</string>
    <string name="read_again">Read again</string>
    <string name="title_activity_end_page">EndPageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_end">End</string>
    <string name="hello" />
    <string name="last_page">Last Page</string>

    <color name="highlight_color">#FFFF00</color>

    <string name="title_activity_glossary">Glossary</string>
    <string name="hello_world">Hello world!</string>
    <string name="glosssary">Glossary</string>
    <string name="statistic">Statistic</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="openBracket">(</string>
    <string name="blank"></string>
    <string name="chinese">Chinese</string>
    <string name="tamil">Tamil</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="en_comment">Please rate this story</string>
    <string name="en_who">Who do you read this story with?</string>
    <string name="parent">Parent</string>
    <string name="brosis">Brothers and Sisters</string>
    <string name="someoneelse">Someone else</string>
    <string name="comments">What is your comment about this story?</string>
    <string name="text_size">Text Size</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_text_size">Set text size</string>
    <string name="save">Save</string>
    <string name="others">Others</string>
    <string name="comment">Comment</string>
    <color name="light_orange">#FFCC99</color>

</resources>